# YueEasy

./: .gitignore  LICENSE  README.md  biome.jsonc  data.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: bump.ps1  bump.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accent_color.rs  cache.rs  download.rs  history.rs  mod.rs  settings.rs  smtc.rs
src-tauri/src/db/: connection.rs
src-tauri/src/ncm/: commands.rs  mod.rs  server.rs
src-tauri/src/utils/: paths.rs
src/components/: AppSidebar.tsx  Brand.tsx  ErrorBoundary.tsx  HorizontalScrollSection.tsx  LoginDialog.tsx  ParallaxCarousel.tsx  PlaylistCard.tsx  QuickEntry.tsx  RatioContainer.tsx  lenis-scroll.tsx  lenis-scrollbar.tsx
src/hooks/: use-can-go-back.ts  use-queue-panel.ts  useAccentColor.ts  useAuthRestore.ts  useIsMobile.ts  useLenis.ts  useLikeInit.ts  useLineLayout.ts  useLoadMore.ts  useLyricScroll.ts  useLyrics.ts  useMediaQuery.ts  useMediaSession.ts  useNcmHealth.ts  usePlayer.ts  usePlayerAction.ts  usePlayerKeyboard.ts  usePlayerRestore.ts  useProgress.ts  useQueuePersistence.ts  useScrollContainer.ts  useThemeSync.ts  useWindowDrag.ts  useWindowEffect.ts
src/lib/: EventEmitter.ts  format.ts  utils.ts
src/pages/: Album.tsx  DailyRecommend.tsx  Home.tsx  LikedSongs.tsx  Login.tsx  PlayerPage.tsx  Playlist.tsx  RecentPlays.tsx  Search.tsx  Settings.tsx
(+135 files in other folders)
